refactor: update pks to be userId etc, use correct types in controllers, format responses in repositories
